# dream

./: CMakeLists.txt  LICENSE
idea/: message_framework.txt
scrum/epic01_foundation framework/: sprint01_launcher.txt  sprint02_event_loop.txt
src/: CMakeLists.txt
src/launch/: CMakeLists.txt  main.cpp
src/modules/: CMakeLists.txt
src/modules/life/: CMakeLists.txt  readme.txt
src/modules/life/include/life/: i_scene_manager.h  scene_signals.h
src/modules/life/src/: lifemodule.cpp  lifemodule.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h
src/modules/main_ui/: CMakeLists.txt  readme.txt
src/modules/main_ui/include/main_ui/: i_toolbox_view.h
src/modules/main_ui/src/: envrender.cpp  envrender.h  geometryrender.cpp  geometryrender.h  mainuimodule.cpp  mainuimodule.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scenerender.cpp  scenerender.h  sceneview.cpp  sceneview.h  tab.cpp  tab.h  tab.ui  tab_bar.cpp  tab_bar.h
src/modules/modeling/: CMakeLists.txt  readme.txt
src/modules/modeling/src/: createpanel.cpp  createpanel.h  createpanel.ui  meshdrawer.cpp  meshdrawer.h  modelcabinet.cpp  modelcabinet.h  modelingmodule.cpp  modelingmodule.h  propcabinet.cpp  propcabinet.h
src/runtime/: CMakeLists.txt
src/runtime/cradle/: CMakeLists.txt
src/runtime/cradle/include/cradle/: cradle.h  cradle_global.h  i_cradle_event.h  i_launcher.h
src/runtime/cradle/src/: actor.cpp  actor.h  actormanager.cpp  actormanager.h  cradle.cpp  objectmanager.cpp  objectmanager.h  saferunevent.cpp  saferunevent.h  signalmanager.cpp  signalmanager.h
src/runtime/eigen_qt/: CMakeLists.txt  readme.txt
src/runtime/eigen_qt/include/eigen_qt/: eulerangles.h
src/runtime/eigen_qt/src/: eulerangles.cpp
src/runtime/event/: CMakeLists.txt
src/runtime/event/include/: event.hpp
src/runtime/events/: CMakeLists.txt  readme.txt
src/runtime/events/include/events/: entity_event.h  event_types.h  events.h
src/runtime/life/: CMakeLists.txt  readme.txt
src/runtime/life/include/life/: life.h  life_global.h  scene.h
src/runtime/life/src/: life.cpp
src/runtime/object_accessor/: CMakeLists.txt  readme.txt
src/runtime/object_accessor/include/object_accessor/: i_msg_queue.h  object_accessor.h  object_accessor_global.h  object_accessor_imp.h  qthread_queue.h
src/runtime/object_accessor/src/: object_accessor_imp.cpp  qthread_queue.cpp  tactorimp.cpp  tactorimp.h
src/runtime/object_accessor/test/: CMakeLists.txt  main.cpp
src/runtime/opengl_render/: CMakeLists.txt  readme.txt
src/runtime/opengl_render/include/opengl_render/: opengl_render_global.h  scenerender.h
src/runtime/opengl_render/src/: envrender.cpp  geometryrender.cpp  resource.qrc  scenerender.cpp
src/runtime/opengl_render/src/shader/: env.vert
src/runtime/qtwidgets_ext/: CMakeLists.txt  readme.txt
src/runtime/qtwidgets_ext/include/qtwidgets_ext/: cabinet.h  drawer.h
src/runtime/qtwidgets_ext/src/: cabinet.cpp  drawer.cpp
src/runtime/router/include/: message.hpp
src/runtime/ui_vw_editor/: CMakeLists.txt  readme.txt
src/runtime/ui_vw_editor/include/ui_vw_editor/: geometryeditor.h
src/runtime/ui_vw_editor/src/: geometryeditor.cpp  geometryeditor.ui
src/runtime/vw/: CMakeLists.txt  readme.txt
src/runtime/vw/include/vw/: axis.h  camera.h  component.h  cone.h  cube.h  entity.h  geometry.h  grid.h  life.h  primitive.h  scene.h  vw_global.h
src/runtime/vw/src/: axis.cpp  camera.cpp  component.cpp  component.h  cone.cpp  cube.cpp  entity.cpp  geometry.cpp  grid.cpp  life.cpp  primitive.cpp  scene.cpp
tools/: gen_module.py  gen_runtime.py  name_convertor.py
